# WebsocketChat

./: LICENSE  chat.py  pyproject.toml  requirements.txt
chat/: client.py  server.py
echo-server/: client copy.py  client.py  server copy.py  server.py
http-example/: index.html
