[tool.poetry]
name = "websocketchat"
version = "0.1.0"
description = "Chat each oter"
authors = ["Maruo.S <raspi-maru2004@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "^1.6.3"
websocket-server = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
